<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="info_about_settings">You can change between metric and imperial units on the \"Settings\" menu</string>
    <string name="food_search_warning_title">Search warning</string>
    <string name="food_search_warning_message">Too many results - please narrow your search.</string>
    <string name="target_explanation_text">If it’s going to take you a long time to reach your ideal weight, think about setting a smaller goal first that is more achievable. Once you have achieved this you can build on your success and set another goal in the future.</string>
    <string name="weight_loss_explanation_text">If you lose weight slowly and steadily you will be more likely to maintain your lower weight in the long term. Nutrition experts advice a safe and healthy rate of weight loss should be no more than 2lb (1kg) a week. You are more likely to succeed if you choose realistic goals that you can re-visit and build on over time. If you are overweight a 10% weight loss can have significant health benefits.</string>
    <string name="bmi_explanation_text">Body Mass Index (BMI) is a measure of how healthy your weight is for your height. The healthy range is 18.5 - 25. Everybody is different and you know at what weight you look and feel best. BMI is used as a guide to indicate your weight-related health risks.</string>
    <string name="target_text1">To lose weight you should eat &lt;b>%.0f&lt;/b> calories. If you stick to this then it will take you &lt;b></string>
    <string name="target_text2">&lt;/b> weeks to reach your goal</string>
    <string name="needed_calories_text">You will need &lt;b>%.0f&lt;/b> calories to maintain your current weight</string>
    <string name="choose_target_weight_label">Choose target weight:</string>
    <string name="choose_weekly_weight_label">Select weekly target:</string>
    <string name="weight_loss_goal_text">Weight loss goal</string>
    <string name="grams">Grams/ml:</string>
    <string name="bmi_label">BMI:</string>
    <string name="incorrect_target_weight_message">You did not set up your target. Would you like to continue?</string>
    <string name="minimum_target_weight_label">Minimum target weight:</string>
    <string name="holiday_mode_label">The “Holiday Mode” is</string>
    <string name="holiday_mode_explanation">When the “Holiday Mode” setting is switched ON then the automated data upload to the website will be disabled.</string>
    <string name="holiday_mode_on_question">The “Holiday Mode” setting is switched ON, thus the automated data upload to the website is disabled. You may incur excessive cost. Would you like to continue uploading?</string>
    <string name="max_rec_loss_label_0">Max recommended</string>
    <string name="max_rec_loss_label_1">loss over this</string>
    <string name="max_rec_loss_label_2">period is:</string>
    <string name="required_weight_loss_label">Target weight:</string>
    <string name="starting_weight_label">Starting weight:</string>
    <string name="starting_height_label">Starting height:</string>
    <string name="name">Name:</string>
    <string name="create_favourite_title">Create new favourite</string>
    <string name="select_favourite_title">Select favourite</string>
    <string name="favourite">Favourite</string>
    <string name="recent_items_menu">Recent items</string>
    <string name="portion">Portion:</string>
    <string name="calories">Calories:</string>
    <string name="serving">Serving:</string>
    <string name="brand">Brand</string>
    <string name="show">Show</string>
    <string name="more">More</string>
    <string name="search">Search</string>
    <string name="change_button">Change</string>
    <string name="alert_dialog_cancel">Cancel</string>
    <string name="alert_dialog_delete">Delete</string>
    <string name="alert_dialog_favourite">Favourite</string>
    <string name="alert_dialog_save">Save</string>
    <string name="title_exercise">Exercise</string>
    <string name="title_snacks">Snacks</string>
    <string name="title_supper">Evening meal</string>
    <string name="title_lunch">Lunch</string>
    <string name="title_breakfast">Breakfast</string>
    <string name="remaining_label">Remaining</string>
    <string name="settings_title">Settings</string>
    <string name="add_to_diary">Add to diary</string>
    <string name="calor_remain_label">CALORIES REMAINING</string>
    <string name="calor_over_limit_label">"CALORIES OVER TODAY'S LIMIT"</string>
    <string name="net_label">Net</string>
    <string name="exercise_label">Exercise</string>
    <string name="food_label">Food</string>
    <string name="goal_label">Goal</string>
    <string name="main_screen_inner_title">Your Daily Summary</string>
    <string name="favourites_title">Favourites</string>
    <string name="weight_entry_title">Weight Entry</string>
    <string name="progress_tracking_title">Progress tracking</string>
    <string name="food_log_title">Diary</string>
    <string name="food_log_complete_title">Diary - day complete</string>
    <string name="help_title">Help</string>
    <string name="exercise_settings_title">Exercise settings (PAL)</string>
    <string name="holiday_mode_title">Holiday Mode</string>
    <string name="target_time_label_0">Time period for</string>
    <string name="target_time_label_1">weight loss (months):</string>
    <string name="target_weight_label">Weight Loss Required:</string>
    <string name="target_label">Weight loss required</string>
    <string name="set_taget_profile">Weight Loss Goals</string>
    <string name="set_target_button">Target settings</string>
    <string name="weigth_label">Weight:</string>
    <string name="height_label">Height:</string>
    <string name="geneder_label">Gender:</string>
    <string name="date_of_birth_label">Date of Birth:</string>
    <string name="surname_label">Surname:</string>
    <string name="first_name_label">First Name:</string>
    <string name="profile_title">Profile</string>
    <string name="pref_label_2">Weight Display Format:</string>
    <string name="pref_label_1">Height Display Format:</string>
    <string name="diary_title">My Meal Mate</string>
    <string name="preferences_title">Preferences</string>
    <string name="favourites">Favourites</string>
    <string name="weight_entry">Weight Entry</string>
    <string name="progress_tracking">Progress Tracking</string>
    <string name="food_log">Food Log</string>
    <string name="help">Help</string>
    <string name="exercise_settings">Exercise Settings</string>
    <string name="holiday_calendar">Holiday Calendar</string>
    <string name="profile">Profile</string>
    <string name="preferences">Preferences</string>
    <string name="settings">Settings...</string>
    <string name="hello">Hello World, Diary!</string>
    <string name="app_name">MyMealMate</string>
    <string name="alert_dialog_change">Change</string>
    <string name="FavouritesDatabase_onCreate">"
    CREATE TABLE favs (id INTEGER PRIMARY KEY AUTOINCREMENT NOT NULL, favname TEXT);
    CREATE TABLE favdetails (id INTEGER PRIMARY KEY AUTOINCREMENT NOT NULL, favid INTEGER, mealslot INTEGER, foodid INTEGER, amount REAL);
    "</string>
    <string name="login_title">My Meal Mate Login</string>
    <string name="login_test">Start</string>
    <string name="enter_user_id">Please enter the User ID</string>
    <string name="user_empty">The User ID must be specified!</string>
    <string name="login_failed">Login Failed</string>
    <string name="login_succeed">Login Succeed</string>
    <string name="login_proceed">Do you want to proceed with this User ID?</string>
    <string name="user_not_found">User not found. Try again.</string>
    <string name="connecting_server">Connecting to server...</string>
    <string name="diagnostics_title">Diagnostics</string>
    <string name="uploaddata_title">Upload Data</string>
    <string name="uploaddata_succeed">Operation completed succesfully</string>
    <string name="uploaddata_failed">Operation failed</string>
    <string name="exercise_work_list_title">How physically active are you during your work/day time? (even work at home, sick leave or studying for instance at University)</string>
    <string name="exercise_leisure_list_title">Describe your physical activity in your leisure time</string>
    <string name="enter_profile_weight_message">You need to set your profile details first</string>
    <string name="your_weight_title">Your weight:</string>
    <string name="tap_to_modify">Tap to modify</string>
    <string name="select_category">Select category:</string>
    <string name="select_exercise">Select exercise:</string>
    <string name="exercise_minutes">Minutes:</string>
    <string name="select_mealslot">Select meal slot:</string>
    <string name="diagnostics_build_title">My Meal Mate</string>
    <string name="diagnostics_build_text">Build number:</string>
    <string name="swipe_for_photo">Swipe to see photo</string>
    <string name="take_photo_menu">Add Photo</string>
    <string name="complete_day_menu">Mark complete</string>
    <string name="complete_day_text">This will mark the day’s entries as completed. No further entries will be possible on this day.</string>
    <string name="youtube_channel">http://www.youtube.com/user/michcart1</string>
    <string name="first_run_message">Welcome to My Meal Mate to get the most out of it try to complete your food diary daily- we hope you enjoy using it.</string>
    <string name="new_target_log_message">New target value %d kcal</string>
    <string name="run_standalone">Run standalone</string>
    <string name="upload_address">Data upload address</string>
    <string name="upload_address_title">Data Upload Address</string>
    <string name="block_messages_title">Block Text Messages</string>
    <string name="block_messages_from">From:</string>
    <string name="block_messages_to">To:</string>
    <string name="block_messages_always">Block always</string>
</resources>
