<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:id="@id/CaptionLinearLayout" android:background="@drawable/gradient" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <RelativeLayout android:id="@id/TitleRelativeLayout" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:id="@id/TitleTextView" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/login_title" android:layout_centerHorizontal="true" style="@style/TextStyle0" />
            <ViewStub android:id="@id/TitleViewStub" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_below="@id/TitleRelativeLayout" android:layout_alignParentLeft="true" />
        </RelativeLayout>
    </LinearLayout>
    <RelativeLayout android:layout_width="fill_parent" android:layout_height="fill_parent">
        <TextView android:id="@id/textView1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="10.0px" android:text="@string/enter_user_id" android:layout_above="@id/loginEdit" android:layout_centerHorizontal="true" />
        <CheckBox android:id="@id/runStandalone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/run_standalone" android:layout_above="@id/loginTestButton" android:layout_alignLeft="@id/textView1" android:onClick="onStandaloneClick" />
        <Button android:textColor="@color/solid_white" android:gravity="center" android:id="@id/loginTestButton" android:background="@drawable/button" android:layout_width="150.0px" android:layout_height="wrap_content" android:layout_marginBottom="132.0dip" android:text="@string/login_test" android:layout_alignParentBottom="true" android:layout_centerHorizontal="true" android:onClick="onTestClick" style="@style/TextStyle0" />
        <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@id/uploadAddressLayout" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_above="@id/runStandalone" android:layout_alignParentLeft="true">
            <TextView android:layout_gravity="center" android:id="@id/textView2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/upload_address" />
            <EditText android:id="@id/uploadAddress" android:layout_width="fill_parent" android:layout_height="fill_parent" android:ems="10" android:singleLine="true">
                <requestFocus />
            </EditText>
        </LinearLayout>
        <EditText android:id="@id/loginEdit" android:layout_width="fill_parent" android:layout_height="wrap_content" android:ems="10" android:layout_above="@id/uploadAddressLayout" android:layout_alignParentLeft="true" android:inputType="number" />
    </RelativeLayout>
</LinearLayout>