<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:id="@id/CaptionLinearLayout" android:background="@drawable/gradient" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <RelativeLayout android:id="@id/TitleRelativeLayout" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:id="@id/TitleTextView" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/holiday_mode_title" android:layout_centerHorizontal="true" style="@style/TextStyle0" />
            <ViewStub android:id="@id/TitleViewStub" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_below="@id/TitleRelativeLayout" android:layout_alignParentLeft="true" />
        </RelativeLayout>
    </LinearLayout>
    <TextView android:textSize="16.0dip" android:id="@id/TextView01" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/holiday_mode_explanation" android:lineSpacingMultiplier="1.3" />
    <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:id="@id/LinearLayout01" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:id="@id/TextView02" android:layout_width="0.0sp" android:layout_height="wrap_content" android:text="@string/holiday_mode_label" android:layout_weight="0.7" style="@style/TextStyle3" />
        <ToggleButton android:id="@id/holidayModeToggleButton" android:layout_width="0.0sp" android:layout_height="wrap_content" android:text="@id/ToggleButton01" android:layout_weight="0.3" />
    </LinearLayout>
</LinearLayout>