<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:background="@drawable/gradient" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:gravity="center_horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/weight_entry_title" style="@style/TextStyle0" />
        <LinearLayout android:layout_gravity="center_horizontal" android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_alignParentTop="true">
            <ImageButton android:id="@id/prevDateNavButton" android:background="#00000000" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/left_arrow" android:onClick="onDateButtonClick" />
            <TextView android:textColor="@color/solid_white" android:layout_gravity="center_vertical" android:id="@id/dateTextView" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="Mon, 12 July" style="@style/TextStyle0" />
            <ImageButton android:id="@id/nextDateNavButton" android:background="#00000000" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/right_arrow" android:onClick="onDateButtonClick" />
        </LinearLayout>
    </LinearLayout>
    <TextView android:gravity="center_horizontal" android:paddingTop="10.0px" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/your_weight_title" />
    <TextView android:gravity="center_horizontal" android:id="@id/weightText" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="0 kg" style="@style/TextStyle4" />
    <TextView android:gravity="center_horizontal" android:id="@id/touchText" android:paddingTop="10.0px" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/tap_to_modify" />
</LinearLayout>