<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:id="@id/CaptionLinearLayout" android:background="@drawable/gradient" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <RelativeLayout android:id="@id/TitleRelativeLayout" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:textColor="@color/solid_white" android:id="@id/TitleTextView" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/diary_title" android:layout_centerHorizontal="true" style="@style/TextStyle0" />
            <ViewStub android:id="@id/TitleViewStub" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_below="@id/TitleRelativeLayout" android:layout_alignParentLeft="true" />
        </RelativeLayout>
        <RelativeLayout android:id="@id/DateNavRelativeLayout" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <ViewStub android:id="@id/leftViewStub" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_alignParentLeft="true" android:layout_alignParentTop="true" />
            <LinearLayout android:orientation="horizontal" android:id="@id/LinearLayout01" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_alignParentTop="true" android:layout_centerHorizontal="true">
                <ImageButton android:layout_gravity="center" android:id="@id/prevDateNavButton" android:background="#00000000" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/left_arrow" />
                <TextView android:textColor="@color/solid_white" android:layout_gravity="center" android:id="@id/dateTextView" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="Mon, 12 July" style="@style/TextStyle0" />
                <ImageButton android:layout_gravity="center" android:id="@id/nextDateNavButton" android:background="#00000000" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/right_arrow" />
            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>
    <LinearLayout android:orientation="vertical" android:id="@id/bodyLinearLayout" android:background="@drawable/gradient" android:paddingLeft="10.0sp" android:paddingTop="10.0sp" android:paddingRight="10.0sp" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <TextView android:textColor="@color/solid_white" android:gravity="center_vertical" android:id="@id/titleTextView" android:background="@drawable/summary_title" android:paddingLeft="17.0sp" android:layout_width="fill_parent" android:layout_height="wrap_content" android:minHeight="50.0sp" android:text="@string/main_screen_inner_title" style="@style/TextStyle0" />
        <LinearLayout android:orientation="vertical" android:id="@id/goalLinearLayout" android:background="@drawable/summary_body" android:paddingTop="30.0sp" android:paddingBottom="25.0sp" android:layout_width="fill_parent" android:layout_height="wrap_content" android:minHeight="155.0sp">
            <TextView android:textColor="@color/light_green" android:gravity="center_horizontal" android:id="@id/calRemainingTextView" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="1590" style="@style/BigTextStyle" />
            <TextView android:textColor="@color/grey" android:gravity="center_horizontal" android:id="@id/labelTextView" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/calor_remain_label" style="@style/TextStyle2" />
        </LinearLayout>
        <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:id="@id/summaryLinearLayout" android:background="@drawable/summary_bottom" android:layout_width="fill_parent" android:layout_height="wrap_content" android:minHeight="75.0sp">
            <LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:id="@id/goalLinearLayout" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_weight="1.0">
                <TextView android:textStyle="normal" android:textColor="@color/grey" android:gravity="center_vertical" android:id="@id/labelTextView" android:layout_width="wrap_content" android:layout_height="0.0dip" android:text="@string/goal_label" android:layout_weight="1.0" style="@style/TextStyle1" />
                <TextView android:textColor="@color/grey" android:gravity="center_vertical" android:id="@id/goalValueTextView" android:layout_width="wrap_content" android:layout_height="0.0dip" android:text="2100" android:layout_weight="1.0" style="@style/TextStyle1" />
            </LinearLayout>
            <LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:id="@id/foodLinearLayout" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_weight="1.0">
                <TextView android:textStyle="normal" android:textColor="@color/grey" android:gravity="center_vertical" android:id="@id/labelTextView" android:layout_width="wrap_content" android:layout_height="0.0dip" android:text="@string/food_label" android:layout_weight="1.0" style="@style/TextStyle1" />
                <TextView android:textColor="@color/grey" android:gravity="center_vertical" android:id="@id/foodValueTextView" android:layout_width="wrap_content" android:layout_height="0.0dip" android:text="+1010" android:layout_weight="1.0" style="@style/TextStyle1" />
            </LinearLayout>
            <LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:id="@id/exerciseLinearLayout" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_weight="1.0">
                <TextView android:textStyle="normal" android:textColor="@color/grey" android:gravity="center_vertical" android:id="@id/labelTextView" android:layout_width="wrap_content" android:layout_height="0.0dip" android:text="@string/exercise_label" android:layout_weight="1.0" style="@style/TextStyle1" />
                <TextView android:textColor="@color/grey" android:gravity="center_vertical" android:id="@id/exerciseValueTextView" android:layout_width="wrap_content" android:layout_height="0.0dip" android:text="-479" android:layout_weight="1.0" style="@style/TextStyle1" />
            </LinearLayout>
            <LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:id="@id/netLinearLayout" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_weight="1.0">
                <TextView android:textStyle="normal" android:textColor="@color/grey" android:gravity="center_vertical" android:id="@id/labelTextView" android:layout_width="wrap_content" android:layout_height="0.0dip" android:text="@string/net_label" android:layout_weight="1.0" style="@style/TextStyle1" />
                <TextView android:textColor="@color/grey" android:gravity="center_vertical" android:id="@id/netValueTextView" android:layout_width="wrap_content" android:layout_height="0.0dip" android:text="531" android:layout_weight="1.0" style="@style/TextStyle1" />
            </LinearLayout>
        </LinearLayout>
        <Button android:textColor="@color/solid_white" android:gravity="center_vertical" android:layout_gravity="center_horizontal" android:id="@id/addToDiaryButton" android:background="@drawable/button" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="25.0sp" android:text="@string/add_to_diary" style="@style/TextStyle0" />
        <LinearLayout android:orientation="horizontal" android:id="@id/holidayModeIndicatorLinearLayout" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:gravity="right" android:id="@id/TextView01" android:layout_width="0.0sp" android:layout_height="wrap_content" android:text="@string/holiday_mode_label" android:layout_weight="0.7" style="@style/TextStyle0" />
            <TextView android:textColor="@color/light_green" android:gravity="left" android:id="@id/TextView02" android:layout_width="0.0sp" android:layout_height="wrap_content" android:text=" ON" android:layout_weight="0.3" style="@style/TextStyle0" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>